
include_directories(${RAPIDJSON_INCLUDE_DIR})
add_executable(custom_tuning custom_tuning.cpp)
add_executable(tuning_request tuning_request.cpp)

if (OpenMP_FOUND)
    add_executable(openmp_1d_stencil 1d_stencil.cpp)
    add_executable(policy_test policy_test.cpp)
    add_library(apex_openmp_policy SHARED apex_openmp_policy.cpp)
    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "NVHPC")
        # Use the tool-enabled OpenMP runtime
        target_compile_options(openmp_1d_stencil PRIVATE "-mp=ompt")
        target_link_options(openmp_1d_stencil PRIVATE "-mp=ompt")
        target_link_libraries(openmp_1d_stencil ${LIBS} stdc++)
        target_compile_options(policy_test PRIVATE "-mp=ompt")
        target_link_options(policy_test PRIVATE "-mp=ompt")
        #target_link_libraries(policy_test ${LIBS})
        target_compile_options(custom_tuning PRIVATE "-mp=ompt")
        target_link_options(custom_tuning PRIVATE "-mp=ompt")
        target_link_libraries(custom_tuning ${LIBS} stdc++)
        target_compile_options(tuning_request PRIVATE "-mp=ompt")
        target_link_options(tuning_request PRIVATE "-mp=ompt")
        target_link_libraries(tuning_request ${LIBS} stdc++)
        target_compile_options(apex_openmp_policy PRIVATE "-mp=ompt")
        target_link_options(apex_openmp_policy PRIVATE "-mp=ompt")
        target_link_libraries(apex_openmp_policy ${LIBS} stdc++)
    else()
        target_link_libraries(openmp_1d_stencil ${LIBS} OpenMP::OpenMP_CXX stdc++)
        target_link_libraries(policy_test OpenMP::OpenMP_CXX stdc++)
        target_link_libraries(custom_tuning ${LIBS} OpenMP::OpenMP_CXX stdc++)
        target_link_libraries(tuning_request ${LIBS} OpenMP::OpenMP_CXX stdc++)
        target_link_libraries(apex_openmp_policy ${LIBS} OpenMP::OpenMP_CXX stdc++)
    endif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "NVHPC")
    add_dependencies (tests policy_test)
    add_dependencies (tests apex_openmp_policy)
    add_dependencies (tests openmp_1d_stencil)
    add_test (NAME "test_policy_test" COMMAND ${APEX_ROOT}/bin/apex_exec ${CMAKE_BINARY_DIR}/bin/policy_test 10)
    set_target_properties(apex_openmp_policy PROPERTIES OUTPUT_NAME apex_openmp_policy)
    add_test (NAME "test_openmp_1d_stencil" COMMAND ${APEX_ROOT}/bin/apex_exec ${CMAKE_BINARY_DIR}/bin/openmp_1d_stencil -c 100000 -b 1000 -i 1000)
else (OpenMP_FOUND)
    target_link_libraries (custom_tuning ${LIBS} stdc++)
    target_link_libraries (tuning_request ${LIBS} stdc++)
endif (OpenMP_FOUND)
add_dependencies (tests custom_tuning)
add_dependencies (tests tuning_request)
add_test (NAME "test_custom_tuning" COMMAND ${APEX_ROOT}/bin/apex_exec ${CMAKE_BINARY_DIR}/bin/custom_tuning)
add_test (NAME "test_tuning_request" COMMAND ${APEX_ROOT}/bin/apex_exec ${CMAKE_BINARY_DIR}/bin/tuning_request)

